@@ -1,3 +1,7 @@
+2007-11-03  Jürg Billeter  <j@bitron.ch>
+
+	* gee/Makefile.am: update for vala 0.1.4
+
 2007-09-07  Jürg Billeter  <j@bitron.ch>
 
 	* update license headers to the GNU Lesser General Public License,
